--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ iframe {
     margin: auto;
 }
 
+.slideshow {
+    width: 480px;
+    height: 307px;
+}
+
 .wordle {
     display: none;
     width: 480px;
@@ -60,11 +65,6 @@ iframe {
 
 #histordle {
     display: block;
-}
-
-#slideshow {
-    width: 500px;
-    height: 320px;
 }
 
 #yeardle {
