--- a/style.css
+++ b/style.css
@@ -24,23 +24,17 @@ div {
     border-radius: 5px;
 }
 
+.divtext {
+    margin-top: 60px;
+    float: left;
+}
+
 iframe {
     background-color: white;
     margin: auto;
 }
 
-.slideshow {
-    width: 480px;
-    height: 307px;
-}
-
-.wordle {
-    display: none;
-    width: 480px;
-    height: 700px;
-}
-
-#abutton {
+.abutton {
     text-decoration: none;
     display: inline-block;
     padding: 10px;
@@ -48,7 +42,13 @@ iframe {
     font-weight: bold;
 }
 
-#bodydiv {
+.archive {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bodydiv {
     width: 600px;
     min-height: 90%;
     border-radius: 5px;
@@ -58,13 +58,60 @@ iframe {
     color: #47443c;
 }
 
-#calendar {
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+
+.calendar {
+    width: 600px;
+}
+
+.class {
     width: 590px;
     height: 400px;
 }
 
+.line-break {
+    width: 600px;
+}
+
+.slideshow {
+    width: 480px;
+    height: 307px;
+}
+
+.spotify {
+    width: 480px;
+    height: 80px;
+}
+
+.thumbnail {
+    width: 150px;
+    margin: 50px 10px 10px 50px;
+    float: left;
+    border: solid;
+    border-width: 5px;
+    border-radius: 10px;
+    border-color: #47443c;
+}
+
+.toolbar {
+    margin-bottom: 10px;
+}
+
+.wordle {
+    display: none;
+    width: 480px;
+    height: 700px;
+}
+
 #histordle {
     display: block;
+}
+
+#left {
+    text-align: left;
 }
 
 #yeardle {
