--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: Calibri;
     text-align: center;
     background-image: url("https://images.pexels.com/photos/69004/pexels-photo-69004.jpeg");
+		background-attachment:fixed
 }
 
 button {
